compiler/testData/diagnostics/tests/enum/enumEntryCannotHaveClassObject.fir.kt
enum class E {
    FIRST,

    SECOND {
        companion object {
            fun foo() = 42
        }
    };
}

fun f() = E.SECOND.<!UNRESOLVED_REFERENCE!>foo<!>()
